--- a/Essays/阅读之战结束了：整体语言法与自然拼读法.md
+++ b/Essays/阅读之战结束了：整体语言法与自然拼读法.md
@@ -1,38 +1,64 @@
-# Reading wars are over: Whole language vs. Phonics
+# Reading wars are over: Whole language vs. Phonics 阅读之战结束了：整体语言法与自然拼读法
 
-## Reading wars waste time
+## Reading wars waste time 阅读之战浪费时间
 
 Fierce battles are waged over a question that can be answered with just a minute of calm reasoning.
 
+为了一个只需冷静推理一分钟就能回答的问题，人们展开了激烈的争斗。
+
 To ask *"Is phonics better than whole language?"* is not much smarter than to ask: *"Which is more important: math or reading?"'*
+
+问*"自然拼读法比整体语言法好吗？"*并不比问"*数学和阅读哪个更重要？*"更聪明。
 
 Both approaches to learning to read are useful and both should be employed on demand. It is the child who should be in the driver seat.
 
+这两种学习阅读的方法都是有用的，而且都应该按需求使用。应该让孩子来选择方法。
+
 A child is a perfect peace maker in reading wars
 
-## Origin of reading wars
+在阅读之战中，孩子是一个完美的和平缔造者。
+
+## Origin of reading wars 阅读之战的起源
 
 Few people contest the value of phonics. When we encounter a rare familiar word in a text, e.g. *PERSPICUOUS*, it is impossible to employ pattern recognition without a degree of phonemic and phonological awareness (i.e. the ability to process sounds in spoken parts of words). Using phonics, it is helpful to sound the word out, and guess the correct word, and the meaning behind it.
 
+很少有人质疑语音学的价值。当我们在文本中遇到一个罕见的熟语，例如*PERSPICUOUS*，如果没有一定程度的音位和语音意识（即处理单词口语部分的声音的能力），就不可能采用模式识别。使用语音学，有助于将单词读出来，并猜测正确的单词，以及其背后的含义。
+
 The value of whole language approach seems less obvious. It is based entirely on pattern recognition. In analogy to machine learning, it benefits from a great deal of data, i.e. voluminous reading.
+
+整体语言法的价值似乎不太明显。它是完全基于模式识别的。类比于机器学习，它得益于大量的数据，即大量的阅读。
 
 It seems to me that it is the proponents of early reading and early instruction in phonics that are most closed minded to the value of the whole language method. It is those who believe in critical periods for developing reading skills that are most vocal. Those who believe kids should be drilled in daycare. Phonics is the favorite weapon of teachers and eager parents. It is a shortcut to child's brain.
 
+在我看来，正是早期阅读和早期语音教学的支持者，对全语言方法的价值持最封闭的态度。那些相信发展阅读技能的关键时期的人是最有发言权的。那些认为孩子们应该在托儿所被操练的人。语音学是教师和热心家长最喜欢的武器。这是一条通往孩子大脑的捷径。
+
 Whole language finds most proponents among highly literate parents and teachers. In particular, those who love literature seem to be most adamant. It is no surprise that those who learned to read on their own by voracious reading in childhood are most vocal about the effectiveness of whole language.
 
+整体语言法在识字率高的家长和教师中找到了最多的拥护者。特别是，那些热爱文学的人似乎是最坚定的。毫不奇怪，那些在童年时通过贪婪的阅读自学成才的人，对全语言的有效性最有发言权。
+
 The value of whole language is easier to demonstrate in the case of English rather than Spanish or Italian. The Dolch word list includes 325 sight words. All readers of English know that sight words prove that phonics is not a universal tool. It is a bit harder to convince those who teach reading in languages where sight words are absent or largely absent (e.g. Italian, Polish, etc.). If a preschool teacher observes a fast progress in reading when employing phonics, and no apparent progress in whole language approach, she will easily become convinced that hers is the only right approach. The comparison between the methods is like comparing apples to oranges. A good metaphor for the futility of such comparisons is the analogy to unschooling. While [direct instruction](https://supermemo.guru/wiki/Direct_instruction) can easily be measured with [standardized testing](https://supermemo.guru/wiki/Standardized_testing), there is no objective measure for [unschooling](https://supermemo.guru/wiki/Unschooling). The superiority of phonics may seem even more pronounced if comprehension is secondary. We can make two year old kids read too. However, my admiration is tempered by the question: *"Don't toddlers have more interesting things to do than cramming phonics?"*. The problem of benchmarks in whole language reading is the same as the problem of benchmarks in [unschooling](https://supermemo.guru/wiki/Unschooling):
+
+在英语而不是西班牙语或意大利语的情况下，整个语言的价值更容易体现。Dolch的单词表包括325个视力词。所有的英语读者都知道，视线词证明了语音学不是一个通用的工具。要说服那些用不存在或基本不存在视线词的语言（如意大利语、波兰语等）进行阅读教学的人就有点困难了。如果一个学前班的老师观察到采用拼音法时阅读进展很快，而采用全语言法时没有明显的进展，她就会很容易地相信她的方法是唯一正确的。这些方法之间的比较就像苹果和桔子的比较。对这种比较的无用性的一个很好的比喻是对非学校教育的比喻。虽然[直接教学](https://supermemo.guru/wiki/Direct_instruction)很容易用[标准化测试](https://supermemo.guru/wiki/Standardized_testing)来衡量，但[非学校教育](https://supermemo.guru/wiki/Unschooling)却没有客观衡量标准。如果理解力是次要的，那么拼音的优越性可能显得更加明显。我们也可以让两岁的孩子阅读。然而，我的敬佩之情被一个问题所削弱。*"难道学步儿童没有比补习拼音更有趣的事情可做吗？全语言阅读中的基准问题与[非学校教育](https://supermemo.guru/wiki/Unschooling)中的基准问题是一样的：
 
 [![Exploration pathways at school and in unschooling.png](https://supermemo.guru/images/thumb/8/87/Exploration_pathways_at_school_and_in_unschooling.png/400px-Exploration_pathways_at_school_and_in_unschooling.png)](https://supermemo.guru/wiki/File:Exploration_pathways_at_school_and_in_unschooling.png)
 
 Reading wars are waged by sides of excellent knowledge. However, the knowledge of opponents is biased to one side of the equation
 
-## You are a holistic reader
+阅读之战是由拥有优秀知识的一方发动的。然而，对手的知识却偏向于其中的一方
+
+## You are a holistic reader 你是一个整体性的读者
 
 All proficient readers use the whole language approach when they asymptotically approach their maximum reading speed. That speed is not the one that speed-readers claim for their own skills. That speed is determined by semantic processing. Our reasoning about the text is what should determine the speed of reading. The speed of reasoning is limited, and so is the speed of reading. See: [How can I read faster?](https://supermemo.guru/wiki/How_can_I_read_faster%3F).
 
+所有熟练的读者在渐进式地接近他们的最大阅读速度时都会使用整体语言方法。这个速度并不是速读者为自己的技能所宣称的速度。这个速度是由语义处理决定的。我们对文本的推理才是决定阅读速度的因素。推理的速度是有限的，而阅读的速度也是有限的。请看。[我怎样才能读得更快？](https://supermemo.guru/wiki/How_can_I_read_faster%3F)。
+
 The following simple experiment will show you that you are a whole language reader too.
 
+下面这个简单的实验会告诉你，你也是一个整体语言阅读者。
+
 Example 1: do you understand this?
+
+例1：你能理解这个吗？
 
 ```
  chin eseandj apan esecitiz ensm ustlearnth ousan dsofcha racte rsand cha racterc ombin atio nstofun ctio ninso ciety
@@ -40,11 +66,15 @@ Example 1: do you understand this?
 
 Example 2: do you understand this?
 
+例2：你能理解这个吗？
+
 ```
  chineseandjapanesecitizensmustlearnthousandsofcharactersandcharactercombinationstofunctioninsociety
 ```
 
-Example 3: do you understand this
+Example 3: do you understand this?
+
+例3：你能理解这个吗？
 
 ```
  Chineeze amd Japenese cityzens musst learrn thouousandz of harakters end harakter kombynetions to funktjon yn sociyety
@@ -52,82 +82,151 @@ Example 3: do you understand this
 
 Some readers are pretty good at decoding Example 2. However, there is always a hint of [bad habits of schooling](https://supermemo.guru/wiki/Bad_habits_of_schooling) (incl. phonics drills). In other words, if Example 2 is easy for you, it can either mean (1) a healthy brain or (2) a healthy brain with a trace of a bad habit. It is hard to know.
 
+有些读者在解码例2方面相当出色。然而，总是有一丝[学校教育的坏习惯](https://supermemo.guru/wiki/Bad_habits_of_schooling)（包括拼音操练）。换句话说，如果例2对你来说很容易，这可能意味着(1)一个健康的大脑，或者(2)一个有一丝坏习惯的健康大脑。这是很难知道的。
+
 For a vast majority of good readers, Example 3 is easiest. This proves that all reading is based on pattern recognition. We know more or less how words look like. Kenneth Goodman called it a recognition based on *"graphophonemic cues"*. The brain fills the remaining gaps with syntax, semantics, and general knowledge of the world (pragmatics).
+
+对于绝大多数优秀的读者来说，例3是最容易的。这证明了所有的阅读都是基于模式识别的。我们或多或少知道单词是什么样子的。肯尼思-古德曼称其为基于*"图形音位线索 "*的识别。大脑用句法、语义和对世界的一般知识（语用学）来填补剩余的空白。
 
 The above shows that we need to learn *"whole language"* sooner or later. Phonics is just a tool of support.
 
-## A century of wars
+上述情况表明，我们迟早需要学习*"整体语言 "*。语音学只是一个辅助工具。
+
+## A century of wars 一个世纪的战争
 
 As it is always the case in [free learning](https://supermemo.guru/wiki/Free_learning), the right approach to reading is to let the child decide. It can begin with comic books, videogames, YouTube videos, alphabet songs for smaller kids, and some occasional dips into phonics as long as the child finds them entertaining. Larry Sanger, a proponent of early reading, hinted that Reading Bear is a good tool. I agree, but the ultimate decision must be made by the child. Pushing phonics can have disastrous effects. John Dewey worried about it as early as in 1898. Phonics must be the most efficient tool to discourage reading! The push for whole language may also turn out disastrous. If the instruction focuses on sight words, it can lead to specialized texts used for the purpose. Those often lead to an off-putting infantilizations: *"Ola had a cat"* or *"See Spot run"*, while there should be no barriers for little kids to enter the realms of advanced knowledge as soon as they enjoy the process. Sanger is pointing in the right direction. Turning phonics into a computer game is the ultimate destination for future reading instruction. If the game allows of dendritic exploration and weasel in phonics when it is needed for progress, we may hit the jackpot of efficient instruction. In exploration, we can also dose in sight words, and exciting titbits of science that provide for a "whole brain" experience. Could an army of experts design a perfect game for learning to read? I doubt so. Free market of ideas is always the right way to go. Kids will choose their tools, and parents will assist with a network of recommendations.
 
+正如[自由学习](https://supermemo.guru/wiki/Free_learning)的一贯做法，正确的阅读方法是让孩子决定。可以从漫画书、电子游戏、YouTube视频、小一点的孩子的字母歌开始，只要孩子觉得有趣，就可以偶尔涉猎一些语音学。拉里-桑格是早期阅读的倡导者，他暗示阅读熊是一个好工具。我同意，但最终的决定必须由孩子自己做出。推销拼音会产生灾难性的影响。约翰-杜威早在1898年就担心过这个问题。语音学必须是阻止阅读的最有效的工具! 推广全语言也可能产生灾难性的后果。如果教学的重点是视字，就会导致为此目的而使用的专门文本。这往往会导致令人厌恶的幼稚化。*"Ola had a cat "*或*"See Spot run "*，而对于小孩子来说，只要他们喜欢这个过程，就应该没有障碍地进入高级知识的领域。桑格指出的方向是正确的。把语音学变成电脑游戏是未来阅读教学的最终归宿。如果游戏允许树枝状的探索，并在需要进步的时候在拼音中加入黄鼠狼，我们就可能中了高效教学的大奖。在探索过程中，我们还可以加入视听单词，以及令人兴奋的科学小知识，以提供 "全脑 "体验。一批专家能够为学习阅读设计一个完美的游戏吗？我对此表示怀疑。思想的自由市场永远是正确的道路。孩子们会选择他们的工具，而父母会通过推荐网络提供帮助。
+
 I learned reading at 6-7 at school. When I was 6, a 5-year-old tried to teach me. It probably did not work. Recently, I have witnessed a 7-year-old instructing a 6-year old in reading words with flashcards. It was a hilarious demonstration of bad school habits. The instructor turned into a mean teacher, and the student turned to pranks and malice as his weapons of defense to avoid learning. Interestingly, it was the teacher who seemed more exhausted. When mom noticed the unhappiness of the teacher kid, she asked both kids what they would rather do. They exclaimed in unison: *"Games!"*. 5 minutes later they played a game with equal joy and teamwork. I was amazed that the game required reading of words. Some of those words were the same as those on the flashcards! It was a fantastic illustration of how **gaming trumps teaching** by a cosmic margin! Instead of drudgery, we have fun. Instead of boredom and anger, we have actual learning!
+
+我6-7岁时在学校学习阅读。在我6岁时，一个5岁的孩子试图教我。这可能没有起到作用。最近，我目睹了一个7岁的孩子用闪卡指导一个6岁的孩子读单词。这是一个搞笑的学校坏习惯的示范。教员变成了一个刻薄的老师，而学生则把恶作剧和恶意作为他逃避学习的防御武器。有趣的是，是老师似乎更累了。当妈妈注意到老师孩子的不快乐时，她问两个孩子他们更愿意做什么。他们异口同声地喊道。*"游戏！"*。5分钟后，他们以同样的快乐和团队精神玩起了游戏。我感到惊讶的是，这个游戏需要阅读单词。其中一些单词与抽认卡上的单词相同！这很好地说明了，我们的孩子是如何做到的。这是一个奇妙的例子，说明了**游戏是如何在宇宙范围内胜过教学的! 与其说是苦差事，不如说是乐趣。与其说是无聊和愤怒，不如说是真正的学习!
 
 The future of learning to read is in videogames. The future does not belong to phonics or early instruction. The future is not in whole language deprived of motivation. The future is a mix of best approaches chosen by children themselves.
 
+学习阅读的未来是在电子游戏中。未来不属于语音学或早期教学。未来不属于被剥夺了动力的整个语言。未来是由儿童自己选择的最佳方法的组合。
+
 The future of reading will be determined by children
+
+阅读的未来将由儿童决定
 
 The warfront may shift towards the battle between texts and videos. We need to brace ourselves for the world when some kids will start reading later. Others will zoom in at record early ages on their own steam. Gaming will propel that change. The most important thing to remember is that **child's brain knows best!**
 
-## Misleading research
+战线可能转向文本和视频之间的战斗。我们需要为一些孩子较晚开始阅读的世界做好准备。其他孩子则会在创纪录的早年就靠自己的力量扩大阅读范围。游戏将推动这一变化。最重要的是要记住，**孩子的大脑最清楚！**
+
+## Misleading research 误导性的研究
 
 If illiterate adults are bad at learning to read, it is not because of some imaginary critical period for reading. An illiterate brain is often polluted with bad strategies and bad habits that make learning hard.
 
+如果成年文盲学习阅读的能力很差，这并不是因为有什么想象中的阅读关键期。文盲的大脑往往被不良策略和坏习惯所污染，使学习变得困难。
+
 Research clearly points to the superiority of phonics in early instruction. This is one more example of science doing an awful job in strategy recommendations. If you take a 4-year-old with a meager 4000 words vocabulary, it is even hard to find suitable texts for whole word learning. Meaningful language is the basis of literacy. The best path to [conceptualization](https://supermemo.guru/wiki/Conceptualization) at that age is a conversation with adults who can instantly tune in and adapt the difficulty level in communication to the needs of a particular child. If text is a poor means of communication at that stage, the only way reading can occur is by mechanistic approach to phonics and decoding texts with poor comprehension.
+
+研究清楚地指出了语音教学在早期教学中的优越性。这又是一个科学在策略建议方面做得很糟糕的例子。如果拿一个4岁的孩子来说，他的词汇量只有区区4000个，甚至很难找到适合全词学习的文本。有意义的语言是读写能力的基础。在这个年龄段，通向[概念化](https://supermemo.guru/wiki/Conceptualization)的最佳途径是与成人对话，他们可以即时调整沟通的难度，以适应特定儿童的需求。如果文字在这个阶段是一种糟糕的交流方式，那么阅读的唯一途径就是通过机械式的拼音方法和理解力差的文字解码来实现。
 
 The situation is not much different at the age of 7 when heavy drilling in phonics may indeed be a fast pathway to reading. However, no good research should skirt around the fact that this heavy drilling will put a great deal of kids off reading for life. It will also generate dyslexics pestered by [toxic memories](https://supermemo.guru/wiki/Toxic_memories). At the same time, a seemingly dyslexic child may be unable to recite the rules of phonics, fail to name individual characters, and show uncanny ability to flawlessly guess the right interpretations in the context of the entire word, the entire phrase, or the entire story. Where simple phonemic memories may fail or become toxic, whole language may come to rescue via pattern recognition.
 
+7岁时的情况并无多大不同，那时大量的语音训练可能确实是通往阅读的快速途径。然而，任何好的研究都不应该回避这样一个事实：这种繁重的操练会使大量的孩子终生无法阅读。它还会产生被[毒性记忆](https://supermemo.guru/wiki/Toxic_memories)纠缠的阅读障碍者。同时，一个看似有阅读障碍的孩子可能无法背诵拼音规则，无法说出个别人物的名字，并表现出不可思议的能力，能在整个单词、整个短语或整个故事的背景下完美地猜出正确的解释。在简单的音位记忆可能失败或变得有毒的地方，整个语言可能通过模式识别来拯救。
+
 The only good comparison of strategies is a long-term comparison. If we take a population of 20 year old proficient readers, we can look for roots of their good reading. There is one variable that will stand prominent: vibrant [learn drive](https://supermemo.guru/wiki/Learn_drive). Proficient reading is based on a great deal of reading that requires passion that derives form the learn drive. The age of reading, the developmental trajectory, and the original learning methods are of negligible importance at this stage. Why wage the wars?
+
+唯一好的策略比较是长期比较。如果我们把20岁的熟练读者作为一个群体，我们可以寻找他们良好阅读的根源。有一个变量会很突出：充满活力的[学习动力](https://supermemo.guru/wiki/Learn_drive)。精通的阅读是基于大量的阅读，而这些阅读需要的激情来自于学习动力。在这个阶段，阅读的年龄，发展的轨迹，以及原来的学习方法都是可以忽略不计的。为什么要发动战争？
 
 The entire Phonics vs Whole language debate was born from the push for early reading at school
 
-## Is teaching necessary?
+整个Phonics与Whole language的争论源于对学校早期阅读的推动
+
+## Is teaching necessary? 教学是必要的吗？
 
 In [democratic schools](https://supermemo.guru/wiki/Democratic_school), occasionally, the role of teachers is played by other children. Most of the time, the learning has a form of [self-learning](https://supermemo.guru/wiki/Self-learning).
 
+在[民主学校](https://supermemo.guru/wiki/Democratic_school)，偶尔，教师的角色是由其他儿童扮演的。大多数时候，学习有一种[自学](https://supermemo.guru/wiki/Self-learning)的形式。
+
 According to [Peter Gray](https://supermemo.guru/wiki/Peter_Gray), among the first thousand graduates of [Sudbury Valley School](https://supermemo.guru/wiki/Sudbury_Valley_School), there was not a single one who did not learn to read. However, the age of the onset of reading was spread widely. In [unschooling](https://supermemo.guru/wiki/Unschooling), it is largely assumed that most kids learn to read between ages 3 and 13, and the actual age is largely dependent on the range of interest. A prospective sculptor is less exposed to written materials than a prospective novelist. Some kids learn on their own. Sometimes even as early as at 4-5. Others ask for assistance from other children. With the arrival of new digital technologies, learning may be accelerated or slowed further. The differential will increase.
+
+据[彼得-格雷](https://supermemo.guru/wiki/Peter_Gray)说，在[萨德伯里山谷学校](https://supermemo.guru/wiki/Sudbury_Valley_School)的前一千名毕业生中，没有一个人不学会阅读。然而，开始阅读的年龄分布很广。在[非学校教育](https://supermemo.guru/wiki/Unschooling)中，人们基本上认为大多数孩子在3至13岁之间学会阅读，而实际年龄主要取决于兴趣范围。一个未来的雕塑家比一个未来的小说家更少接触到书面材料。有些孩子是自己学的。有时甚至早在4-5岁时就开始了。其他孩子则要求其他孩子的帮助。随着新的数字技术的到来，学习可能会被加速或进一步放缓。差别会越来越大。
 
 Harms of teaching are illustrated by **[educational dyslexia](https://supermemo.guru/wiki/Reading_wars_are_over:_Whole_language_vs._Phonics#educational_dyslexia)**, which is nothing else but a set of [toxic memories](https://supermemo.guru/wiki/Toxic_memories) associated with reading. When the data on input makes it impossible to engage in successful pattern recognition, the brain with generate [decoding failure penalty](https://supermemo.guru/wiki/Decoding_failure_penalty). If that process is controlled by [schooling](https://supermemo.guru/wiki/Schooling), repeat failure may be associated with anxiety and stress. This is how [toxic memories](https://supermemo.guru/wiki/Toxic_memories) get imprinted. They can survive a lifetime. They can brand a perfectly healthy individual as a dyslectic. Dyslexia is viewed as a form of disability. As such, it often has an awful impact on self-esteem. Some personalities, like Richard Branson, embrace the "problem", and show to the world that the semantic brain is the most important asset in successful life.
 
-## Educational dyslexia
+教学的危害由**[教育性阅读障碍](https://supermemo.guru/wiki/Reading_wars_are_over:_Whole_language_vs._Phonics#educational_dyslexia)**说明，这只不过是一套与阅读相关的[毒性记忆](https://supermemo.guru/wiki/Toxic_memories)。当输入的数据使人无法成功地进行模式识别时，大脑会产生[解码失败惩罚](https://supermemo.guru/wiki/Decoding_failure_penalty)。如果这个过程是由[学校教育](https://supermemo.guru/wiki/Schooling)控制的，重复失败可能与焦虑和压力有关。这就是[毒性记忆](https://supermemo.guru/wiki/Toxic_memories)如何被打上烙印。它们可以存活一生。它们可以把一个完全健康的人打造成一个有障碍的人。阅读障碍被视为一种残疾形式。因此，它常常对自尊心产生可怕的影响。有些人，如理查德-布兰森，接受了这个 "问题"，并向世界表明，语义脑是成功生活中最重要的资产。
+
+## Educational dyslexia 教育性阅读障碍
 
 Samuel Blumenfeld has been ranting about the school system for decades. He died in 2015 at the beautiful age of 89. In his book, *"Crimes of the educators"*, Sam described a phenomenon that has been referred to as *"induced dyslexia"*, *"educational dyslexia"* or colloquially *"school dyslexia"*. His flawless reasoning may be misread as an attack on the whole language method. Blumenfeld is right about the problem of [cramming](https://supermemo.guru/wiki/Cramming) the sight vocabulary. However, he uses a narrower definition of the whole language approach. In his characteristically vivid style, he writes:
 
+塞缪尔-布卢门菲尔德几十年来一直在对学校系统进行咆哮。他于2015年去世，享年89岁。在他的书《教育者的罪行》*中，萨姆描述了一种被称为*"诱发性阅读障碍 "*、*"教育性阅读障碍 "*或俗称*"学校阅读障碍 "*的现象。他无懈可击的推理可能被误读为对全语言方法的攻击。布卢门菲尔德对[填鸭式](https://supermemo.guru/wiki/Cramming)视觉词汇的问题是正确的。然而，他对整个语言方法使用了一个较窄的定义。他以其特有的生动风格写道。
+
 > I came to the conclusion that anyone taught to read exclusively by that sight-word method was at risk of becoming dyslexic [...] I call a sight vocabulary *“the poison of primary education”*. It does to the brain what the drug thalidomide did to the fetus that emerged from the womb without arms
+
+> 我得出的结论是，凡是完全用视字法教人阅读的人，都有可能成为阅读障碍者[......]我把视字法称为*"初级教育的毒药 "*。它对大脑的影响就像药物沙利度胺对从子宫里出来的没有手臂的胎儿的影响一样。
 
 Blumenfeld's reasoning is largely correct, but highly misleading:
 
+布卢门菲尔德的推理基本上是正确的，但有很大的误导性：
+
 > E. W. Dolch was a professor of education in the early 1920s who composed a list of the most frequently used words in English. It was thought that if children learned several hundred of these words by sight – that is, by whole-word recognition – before they even knew the alphabet or the letter sounds, they would have a jumping head start in learning to read. But what Dolch didn’t realize is that once the child began to automatically look at English printed words as whole configurations, like Chinese characters, or little pictures, the child would develop a whole-word or holistic reflex or habit, which would then become a block against seeing our alphabetic words in their phonetic structure. And that blockage would cause the symptoms of what is known as dyslexia
+
+> E. W. Dolch是20世纪20年代初的一位教育学教授，他编写了一份英语中最常用的单词清单。他认为，如果儿童在认识字母表或字母发音之前就通过视觉--也就是通过整个单词的识别--学会了其中的几百个单词，那么他们在学习阅读时就会有一个跳跃性的开始。但多尔奇没有意识到的是，一旦孩子开始自动将英语印刷品看成整体配置，就像汉字或小图片一样，孩子就会养成一个整体字或整体反射或习惯，这就会成为一个障碍，阻碍他们在语音结构中看到我们的字母词。而这种阻碍将导致所谓的阅读障碍的症状。
 
 What Blumenfeld and others have correctly noticed is the impact of habit on the learning strategy, and the impact of [toxic memory](https://supermemo.guru/wiki/Toxic_memory) on the ability to adapt and progress in the learning process. If a child is required to memorize sight words at a steady rate, e.g. 5 words per week, it can quickly build up a backlog of words that will be hard to remember. The backlog will lead to stress under the pressure of schooling. The backlog will largely be a function of (1) "asemantic readiness" (i.e. ability to "memorize as is" without any semantic context), (2) the time devoted, (3) the strategy, (4) interference (from other memories and life events), etc. When the backlog builds up, so does the pressure at school, and the risk of forming toxic associations between memories and states of anxiety.
 
+布卢门菲尔德和其他人正确地注意到了习惯对学习策略的影响，以及[毒性记忆](https://supermemo.guru/wiki/Toxic_memory)对学习过程中适应和进步能力的影响。如果要求孩子以稳定的速度背诵视力单词，例如每周5个单词，就会很快积压起难以记忆的单词。在学校教育的压力下，这种积压会导致压力。积压的单词在很大程度上取决于（1）"语义准备"（即在没有任何语义背景的情况下 "按原样记忆 "的能力），（2）投入的时间，（3）策略，（4）干扰（来自其他记忆和生活事件），等等。当积压的东西越来越多时，学校的压力也越来越大，而且有可能在记忆和焦虑状态之间形成有毒的关联。
+
 However, the exactly same process can occur with phonics. If 44 sounds of English can be written in 1100 ways, the entire process of learning to read requires memorization of tiny reading blocks such as "a", "ba", "ball" vs. "bat", etc. Once asemantic memory is involved, we can easily generate [toxic memories](https://supermemo.guru/wiki/Toxic_memories) through the pressure to perform. The entire school system is based on timed benchmarks, which are a breeding ground for toxic memories. It does not matter if anxiety is induced by sight words, or phonemes, or the mere act of reading. Anxiety is the first step to reading problems that are notoriously confused with organic dyslexia. Spotty knowledge of phonics may involve a habit of inaccurate serialized reading. When there is trouble to correctly sound out words, semantics and comprehension will suffer.
+
+然而，完全相同的过程可以发生在语音学上。如果英语的44个音可以用1100种方式来写，那么学习阅读的整个过程就需要记忆微小的阅读块，如 "a"、"ba"、"ball "与 "bat "等等。一旦涉及语义记忆，我们就很容易通过业绩压力产生[毒性记忆](https://supermemo.guru/wiki/Toxic_memories)。整个学校系统是基于定时的基准，这是毒性记忆的滋生地。如果焦虑是由视字、音素或单纯的阅读行为引起的，这并不重要。焦虑是阅读问题的第一步，而这些问题与有机阅读障碍相混淆是出了名的。对拼音的认识不足可能涉及不准确的连读习惯。当正确发音有困难时，语义学和理解力就会受到影响。
 
 As much as excess sight words, excess number of combination of possible interpretations of strings of characters, can have the same effect. The difficulty may get exponentially worse in multilingual children forced to read in systems with different phonics. A neural network needs to receive meaningful training input in manageable chunks on demand. Any acceleration, increase in complexity (character combinations), or pressure is likely to induce [toxic memory](https://supermemo.guru/wiki/Toxic_memory) or [reactance](https://supermemo.guru/wiki/Reactance), and discourage or inhibit further progress.
 
+就像过多的视字一样，过多的字符串可能的解释组合也会产生同样的影响。对于被迫在不同语音系统中阅读的多语言儿童来说，这种困难可能会成倍地恶化。神经网络需要按要求接收有意义的、可管理的训练输入。任何加速、复杂性（字符组合）的增加或压力都可能诱发[毒性记忆](https://supermemo.guru/wiki/Toxic_memory)或[反应](https://supermemo.guru/wiki/Reactance)，并阻碍或抑制进一步的进展。
+
 In optimally deployed whole language approach, sight vocabulary is mastered by massive exposure in context. In prolonged exposure, asemantic content is seeking [semantic anchoring](https://supermemo.guru/wiki/Semantic_anchor) by [knowledge darwinism](https://supermemo.guru/wiki/Knowledge_darwinism).
+
+在优化部署的全语言方法中，视力词汇是通过在语境中大量接触而掌握的。在长期的接触中，语义内容是通过[知识达尔文主义](https://supermemo.guru/wiki/Knowledge_darwinism)寻求[语义锚定](https://supermemo.guru/wiki/Semantic_anchor)。
 
 The habit may also contribute to toxicity:
 
+习惯也可能促成毒性：
+
 > Miller discovered that when preschoolers memorize as sight words the entire texts of such popular books as Dr. Seuss's The Cat in the Hat and Green Eggs and Ham, they develop a block against seeing the words phonetically and thus become "dyslexic." They become sight readers with a holistic reflex rather than phonetic readers with a phonetic reflex
+
+> 米勒发现，当学龄前儿童把苏斯博士的《戴帽子的猫》和《绿鸡蛋和火腿》等流行书籍的全部内容作为视字来记忆时，他们就会产生一种障碍，无法看到这些字的语音，从而成为 "阅读障碍"。他们成为具有整体反射的视力阅读者，而不是具有语音反射的语音阅读者。
 
 Symmetrically, the habit problem may occur when a "holistic reader" faces the pressures of phonics, or a "serial reader" faces the pressure of sight words memorization. Both processes should proceed naturally on demand. Both can proceed naturally in the world of digital media that is full of text accompanied by rich audiovisual feedback. Modern world is swarming with correct feedback of optimum complexity (expressed as [learntropy](https://supermemo.guru/wiki/Learntropy)). The guidance system responsible for the optimum identification is the [learn drive](https://supermemo.guru/wiki/Learn_drive) (see: [Optimality of the learn drive](https://supermemo.guru/wiki/Optimality_of_the_learn_drive)).
 
+对称地讲，当一个 "整体性阅读者 "面对拼音的压力时，或者一个 "系列性阅读者 "面对背诵视字的压力时，都可能出现习惯问题。这两个过程都应该按要求自然进行。在数字媒体的世界里，这两个过程都可以自然进行，因为数字媒体充满了文字，并伴有丰富的视听反馈。现代世界蜂拥着最佳复杂度的正确反馈(表示为[学霸](https://supermemo.guru/wiki/Learntropy))。负责最佳识别的指导系统是[学习驱动](https://supermemo.guru/wiki/Learn_drive)（见：[学习驱动的优化](https://supermemo.guru/wiki/Optimality_of_the_learn_drive)）。
+
 Sight vocabulary should not be memorized (e.g. as in [SuperMemo](https://supermemo.guru/wiki/SuperMemo)). The reasons are the same as in the case of words, syllables, or the multiplication table. Asemantic memorization under the pressure of benchmarks leads to [toxic memories](https://supermemo.guru/wiki/Toxic_memories). The Dolch list is interesting, but it should never be memorized! Instead, it can be used as a diagnostic to measure progress. Blumenfeld is right, even five words per week is too much for a 5 year old. It can quickly lead to a backlog, which can lead to a toxic memory, which is bound to lead to a **diagnosis of dyslexia with no organic cause**. The child must be in command of the process, esp. in reference to pace, selection of material, duration of exposure, etc. Without [free learning](https://supermemo.guru/wiki/Free_learning), reading instruction, esp. early reading instruction, can lead to [induced dyslexia](https://supermemo.guru/wiki/Induced_dyslexia).
+
+视力词汇不应该被记住（例如像 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 中那样）。其原因与单词、音节或乘法表的情况相同。在基准的压力下进行语义记忆会导致[毒性记忆](https://supermemo.guru/wiki/Toxic_memories)。Dolch列表很有趣，但绝对不应该记住它！相反，它可以作为一个工具来使用。相反，它可以作为一种诊断方法来衡量进展。Blumenfeld是对的，即使是每周5个单词，对一个5岁的孩子来说也太多了。它可以迅速导致积压，从而导致毒性记忆，这必然会导致**诊断为无器质性原因的阅读障碍。孩子必须掌握这个过程，特别是在参考节奏、材料的选择、接触的时间等方面。如果没有[自由学习](https://supermemo.guru/wiki/Free_learning)，阅读教学，特别是早期阅读教学，会导致[诱发性阅读障碍](https://supermemo.guru/wiki/Induced_dyslexia)。
 
 Schools can induce educational dyslexia
 
-## Conclusion
+学校可以诱发教育性阅读障碍
+
+## Conclusion 结论
 
 Over the last century, the battlefront of reading wars would shift to favor one side or the other. Once one side gained dominance, it would convince legislators to mandate its preferred methodology. A decade or two later, when evidence kept mounting of the harm of reading instruction, the other side would gain dominance. Legislators would go back to work, new theorists and new leaders would emerge and the whole process would enter oscillations based on inter-generational forgetting of old solutions, and the excitement about new solutions. Collectively, we could never see that the real culprit is the attempt to find an assembly line prescription for all children. We failed to rely on the [pleasure of reading](https://supermemo.guru/wiki/Pleasure_of_learning). We failed to trust children. We kept looking for a factory solution that was bound to hurt a large subset of children.
 
+在过去的一个世纪里，阅读战争的战线会转移到有利于一方或另一方。一旦一方获得了主导地位，它就会说服立法者强制执行其偏好的方法。十年或二十年后，当越来越多的证据表明阅读教学的危害时，另一方就会获得主导地位。立法者将重新开始工作，新的理论家和新的领导人将出现，整个过程将进入基于代际间对旧解决方案的遗忘和对新解决方案的兴奋的振荡。集体而言，我们从未看到真正的罪魁祸首是试图为所有儿童找到一个流水线的处方。我们没能依靠[阅读的乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)。我们没能信任儿童。我们一直在寻找一种工厂化的解决方案，而这种解决方案势必会伤害一大部分儿童。
+
 Dismal reading proficiency should in part be blamed on the attempts to industrialize the learning process
+
+糟糕的阅读能力应该部分归咎于将学习过程工业化的尝试。
 
 Dr. Maryanne Wolf put it in [48 seconds](https://www.youtube.com/watch?v=XHe9UJTte-M)
 
-## Further reading
+玛丽安-沃尔夫博士把它放在[48秒](https://www.youtube.com/watch?v=XHe9UJTte-M)
+
+## Further reading 进一步阅读
 
 - [Gray: Mechanics of educational dyslexia](https://supermemo.guru/wiki/Gray:_Mechanics_of_educational_dyslexia)
+- [格雷：教育失读症的机制](https://supermemo.guru/wiki/Gray:_Mechanics_of_educational_dyslexia)
 - [Toxic memory](https://supermemo.guru/wiki/Toxic_memory)
+- [毒性记忆](https://supermemo.guru/wiki/Toxic_memory)
 - [Trading genius for Asperger](https://supermemo.guru/wiki/Trading_genius_for_Asperger)
+- [用天才换阿斯伯格](https://supermemo.guru/wiki/Trading_genius_for_Asperger)
 - [Educational dyslexia](https://supermemo.guru/wiki/Educational_dyslexia)
-- [Precocity paradox](
+- [教育性阅读障碍](https://supermemo.guru/wiki/Educational_dyslexia)
+- [Precocity paradox](https://supermemo.guru/wiki/Precocity_paradox)
+- [早熟悖论](
