--- a/Essays/在课堂上使用间隔重复软件的这七年.md
+++ b/Essays/在课堂上使用间隔重复软件的这七年.md
@@ -6,9 +6,9 @@
 
 ## 说明
 
-This is a reflective essay and report on my experiences using [Spaced Repetition](http://www.gwern.net/Spaced repetition) Software (SRS) in an American high school classroom. It follows my [2015](https://www.lesswrong.com/posts/Ww2dxwWpSfkQB4NZb/a-year-of-spaced-repetition-software-in-the-classroom) and [2016](https://www.lesswrong.com/posts/dtCfxYubZgRnEkGpQ/a-second-year-of-spaced-repetition-software-in-the-classroom) posts on the same topic.
+This is a reflective essay and report on my experiences using [Spaced Repetition](https://www.gwern.net/Spaced-repetition) Software (SRS) in an American high school classroom. It follows my [2015](https://www.lesswrong.com/posts/Ww2dxwWpSfkQB4NZb/a-year-of-spaced-repetition-software-in-the-classroom) and [2016](https://www.lesswrong.com/posts/dtCfxYubZgRnEkGpQ/a-second-year-of-spaced-repetition-software-in-the-classroom) posts on the same topic.
 
-这是一篇关于我在美国高中课堂上使用[间隔重复](http://www.gwern.net/Spaced repetition)软件(SRS)经验的反思性文章和报告。它是继我 [2015](https://www.lesswrong.com/posts/Ww2dxwWpSfkQB4NZb/a-year-of-spaced-repetition-software-in-the-classroom) 和 [2016](https://www.lesswrong.com/posts/dtCfxYubZgRnEkGpQ/a-second-year-of-spaced-repetition-software-in-the-classroom) 关于同一主题的帖子之后的又一篇文章。
+这是一篇关于我在美国高中课堂上使用[间隔重复](https://www.gwern.net/Spaced-repetition)软件(SRS)经验的反思性文章和报告。它是继我 [2015](https://www.lesswrong.com/posts/Ww2dxwWpSfkQB4NZb/a-year-of-spaced-repetition-software-in-the-classroom) 和 [2016](https://www.lesswrong.com/posts/dtCfxYubZgRnEkGpQ/a-second-year-of-spaced-repetition-software-in-the-classroom) 关于同一主题的帖子之后的又一篇文章。
 
 Because I value concise summaries in non-fiction, I provide one immediately below. However, I also believe in the power of narrative, in carefully unfolding a story so as to maximize reader engagement and impact. As I have applied such narrative considerations in writing this post, I consider the following summary to be a spoiler.
 
