--- a/Essays/早熟悖论：早期教学可能会损害长期成长.md
+++ b/Essays/早熟悖论：早期教学可能会损害长期成长.md
@@ -78,7 +78,7 @@ Young brains grow fast. They learn by changing their structure. By forging new p
 
 年轻的大脑成长很快。他们通过改变其结构来学习。通过建立新的路径。这就是为什么我们可能怀有这样的幻想，即有些记忆会永远伴随着孩子。为了争论，我将声称这些不是 "记忆"，这些是技能、特征、程序等。**所有早期的学习投资应该塑造性格，而不是具体的记忆**。用神经网络的话来说，这种变化影响的是结构和可控性，而不是单个突触。简单的陈述性记忆在快速成长的大脑中并不持久。它们需要一次又一次地被重新记忆。这就是为什么早期[学术指导](https://supermemo.guru/wiki/Academic_knowledge)是浪费时间或有害的。
 
-[![File:Childhood amnesia.png](https://supermemo.guru/images/thumb/4/4f/Childhood_amnesia.png/800px-Childhood_amnesia.png)](https://supermemo.guru/images/4/4f/Childhood_amnesia.png)
+![Kids who bloom late may bloom better](https://pic4.zhimg.com/80/v2-ca34774e45d92b17955dbaf3c4d04634.png)
 
 > **Figure:** An immature brain is a great [generalizer](https://supermemo.guru/wiki/Generalization). Due to its [high plasticity](https://supermemo.guru/wiki/Dendritic_spine_stabilization_corresponds_with_long-term_memories), it can impress the adult world with "fast learning". Children are labelled as the "amazing learning machines". The large number of neurons in a baby cortex is also a supposed indicator of great learning potential and high intelligence. In reality, the rapid speed of network remolding due to the [conceptualization](https://supermemo.guru/wiki/Conceptualization) process results in high volatility of memories. That volatility in reference to episodic memories is called [childhood amnesia](https://supermemo.guru/wiki/Childhood_amnesia). Children have awful long-term memory, and early academic instruction is harmful. It may lead to [toxic memory](https://supermemo.guru/wiki/Toxic_memory) and impaired [conceptualization](https://supermemo.guru/wiki/Conceptualization). A child's brain is on its way towards the high efficiency of small-world networks that characterize the adult brain topologies. In the picture, a simple association needed to form an [atomic memory](https://supermemo.guru/wiki/Atomic_memory) (A-B) may traverse a larger number of nodes in the network. It is also at a higher risk of [interference](https://supermemo.guru/wiki/Interference) from neighboring links (in orange). Fore details see: **Precocity paradox**
 >
