--- a/Essays/阅读之战结束了：整体语言法与自然拼读法.md
+++ b/Essays/阅读之战结束了：整体语言法与自然拼读法.md
@@ -229,4 +229,4 @@ Dr. Maryanne Wolf put it in [48 seconds](https://www.youtube.com/watch?v=XHe9UJT
 - [Educational dyslexia](https://supermemo.guru/wiki/Educational_dyslexia)
 - [教育性阅读障碍](https://supermemo.guru/wiki/Educational_dyslexia)
 - [Precocity paradox](https://supermemo.guru/wiki/Precocity_paradox)
-- [早熟悖论](
+- [早熟悖论](https://supermemo.guru/wiki/Precocity_paradox)
